html template completed with small styles. will build onto it more once logic is completed.

--- a/template/index.html
+++ b/template/index.html
@@ -93,5 +93,70 @@
         </ul>
       </div>
     </section>
+
+    <section class="experience-section">
+      <div class="experience-header">
+        <h2>Experience</h2>
+      </div>
+
+      <div class="work-history">
+        <div class="work-title">
+          <p><strong>Junior Web Developer</strong></p>
+          <p><strong>Nebula Software Solutions</strong></p>
+        </div>
+        <div class="work-time">
+          <p>2022-2022</p>
+          <p>Fort Lauderdale, FL</p>
+        </div>
+      </div>
+
+      <div class="work-summary">
+        <p>
+          As a Junior dev working at Nebula, My role consisted of writing clean
+          and maintainable code in React.js. I participated in code reviews with
+          the guidance of a senior dev. Communicated with other developers on my
+          team with problem solving and debugging sessions regularly. Followed
+          agile development methodologies and contributed to sprint planning and
+          daily stand-up meetings.
+        </p>
+      </div>
+
+      <div class="key-list">
+        <ul>
+          <li>
+            Implemented a reusable navbar component I created using React on the
+            company landing page.
+          </li>
+          <li>Worked on internal company tools using vanilla Javascript.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="education-section">
+      <div class="education-header">
+        <h2>Education</h2>
+      </div>
+
+      <div class="education-title">
+        <p>
+          <strong
+            >Full Stack Web Development Bootcamp Certificate: UCF, Orlando,
+            FL</strong
+          >
+        </p>
+      </div>
+
+      <div class="education-summary">
+        <p>
+          A 24-week intensive program focused on gaining technical programming
+          skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, Firebase,
+          Node.js, MySQL, MongoDB, Express, Handelbars.js, and ReactJS.
+        </p>
+      </div>
+
+      <div class="degree">
+        <p><strong>Certification: UCF, Orlando, FL</strong></p>
+      </div>
+    </section>
   </body>
 </html>
