fixed error that wouldn't pass data from each inquirer prompt which resulted in undefined values on generated resume. cleaned up and commented code.

--- a/template/generatedResume.html
+++ b/template/generatedResume.html
@@ -1,5 +1,4 @@
-const generateMyResume = (data) => {
-  return `<!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en">
       <head>
         <meta charset="UTF-8" />
@@ -11,16 +10,16 @@ const generateMyResume = (data) => {
       <body>
         <header class="header-layout">
           <div class="header-name-div">
-            <h1>${data.fullName}</h1>
+            <h1>d</h1>
           </div>
           <div class="header-location-div">
-            <h3>${data.city}, ${data.state}</h3>
+            <h3>d, d</h3>
           </div>
           <div class="header-links-div">
             <h3>
-              LinkedIn: ${data.linkedIn} |
-              Github: ${data.github} | Portfolio:
-              ${data.portfolio}
+              LinkedIn: d |
+              Github: d | Portfolio:
+              d
             </h3>
           </div>
         </header>
@@ -31,7 +30,7 @@ const generateMyResume = (data) => {
           </div>
           <div class="summary-paragraph-div">
             <p>
-                ${data.personalSummary}
+                d
             </p>
           </div>
         </section>
@@ -42,10 +41,10 @@ const generateMyResume = (data) => {
           </div>
           <div class="tech-skills-paragraph">
             <p>
-              Front end skills: ${data.frontEndSkills}
+              Front end skills: d
             </p>
             <p>
-              Back end skills: ${data.backEndSkills}
+              Back end skills: d
             </p>
           </div>
         </section>
@@ -56,27 +55,27 @@ const generateMyResume = (data) => {
           </div>
           <div class="projects-content">
             <h4>
-              ${data.projectTitle} |
-            <a href="${data.projectGithubLink}"
-                >${data.projectGithubLink}</a
+              d |
+            <a href="d"
+                >d</a
               >
               |
-              <a href="${data.projectionApplicationLink}"
-                >${data.projectionApplicationLink}</a
+              <a href="d"
+                >d</a
               >
             </h4>
             <ul>
               <li>
-               ${data.keyItemOne}
+               d
               </li>
               <li>
-                ${data.keyItemTwo}
+                d
               </li>
               <li>
-                ${data.keyItemThree}
+                d
               </li>
-              <li>Front end tools used: ${data.frontEndToolsUsed}</li>
-              <li>Back end tools used: ${data.backEndToolsUsed}</li>
+              <li>Front end tools used: d</li>
+              <li>Back end tools used: d</li>
             </ul>
           </div>
         </section>
@@ -88,28 +87,28 @@ const generateMyResume = (data) => {
 
           <div class="work-history">
             <div class="work-title">
-              <p><strong>${data.jobTitle}</strong></p>
-              <p><strong>${data.companyName}</strong></p>
+              <p><strong>d</strong></p>
+              <p><strong>d</strong></p>
             </div>
             <div class="work-time">
-              <p>${data.startYear}-${data.endYear}</p>
-              <p>${data.companyCity}, ${data.companyState}</p>
+              <p>d-d</p>
+              <p>d, d</p>
             </div>
           </div>
 
           <div class="work-summary">
             <p>
-              ${data.jobSummary}
+              d
             </p>
           </div>
 
           <div class="key-list">
             <ul>
               <li>
-                ${data.jobKeyPointOne}
+                d
               </li>
-              <li>${data.jobKeyPointTwo}</li>
-              <li>${data.jobKeyPointThree}</li>
+              <li>d</li>
+              <li>d</li>
             </ul>
           </div>
         </section>
@@ -122,21 +121,18 @@ const generateMyResume = (data) => {
           <div class="education-title">
             <p>
               <strong
-                >${data.major}: ${data.universityName}, ${data.universityCity},
-                ${data.universityState}</strong>
+                >d: d, d,
+                d</strong>
               >
             </p>
           </div>
 
           <div class="education-summary">
             <p>
-              ${data.universitySummary}
+              d
             </p>
           </div>
         </section>
       </body>
     </html>
-    `;
-};
-
-export default generateMyResume;
+    
